--- a/report/space.css
+++ b/report/space.css
@@ -89,12 +89,12 @@
 }
 
 .stars {
-  background: #000 url(http://sylvaingarnot.fr/media/stars.png) repeat top center;
+  background: #000 url(stars.png) repeat top center;
   z-index: 0;
 }
 
 .twinkling {
-  background: transparent url(http://sylvaingarnot.fr/media/twinkling.png) repeat top center;
+  background: transparent url(twinkling.png) repeat top center;
   z-index: 1;
   -moz-animation: move-twink-back 200s linear infinite;
   -ms-animation: move-twink-back 200s linear infinite;
@@ -104,7 +104,7 @@
 }
 
 .clouds {
-  background: transparent url(http://sylvaingarnot.fr/media/clouds.png) repeat top center;
+  background: transparent url(clouds.png) repeat top center;
   z-index: 3;
   -moz-animation: move-clouds-back 200s linear infinite;
   -ms-animation: move-clouds-back 200s linear infinite;
