--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,10 @@ html {
   overflow: hidden;
 }
 
+body {
+  background-color: #000000;
+}
+
 #loading {
   position: fixed;
   top: 45%;
@@ -49,6 +53,22 @@ html {
   position: absolute;
   bottom: 150px;
   right: 100px;
+}
+
+.welcome {
+  position: absolute;
+  width: 655px;
+  height: 663px;
+  bottom: 150px;  
+  left: 100px;
+  box-sizing: border-box;
+  color: #a6eaff;
+  font-family: "Signika", serif; 
+}
+
+.rebel-alliance-symbol {
+  width: auto;
+  height: 50px;
 }
 
 #wrapper {
