--- a/report/index.css
+++ b/report/index.css
@@ -48,3 +48,17 @@ h1, h2, h3 {
   width: 1100px;
   height: auto;
 }
+
+@media (max-width: 767px) {
+  .message {
+    width: auto;
+  }
+
+  .darth-vader {
+    display: none;
+  }
+
+  .death-star {
+    display: none;
+  }
+}
